split code into different files

--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 <body>
     <p id="screen">Something else<br> should be here.</p>
 
+    <script src="rendering.js"></script>
+    <script src="geometry.js"></script>
     <script src="index.js"></script>
 </body>
 </html>
