created engine.js file

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 
     <script src="rendering.js"></script>
     <script src="geometry.js"></script>
+    <script src="engine.js"></script>
     <script src="index.js"></script>
 </body>
 </html>
