added basis for collider class

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <p id="screen">Something else<br> should be here.</p>
+    <p id="screen">An error occured</p>
 
     <script src="rendering.js"></script>
     <script src="geometry.js"></script>
