added multiple gameobject child-classes

--- a/index.html
+++ b/index.html
@@ -10,9 +10,13 @@
 <body>
     <p id="screen">An error occured</p>
 
-    <script src="rendering.js"></script>
-    <script src="geometry.js"></script>
-    <script src="engine.js"></script>
-    <script src="index.js"></script>
+    <script src="./rendering.js"></script>
+    <script src="./geometry.js"></script>
+    <script src="./engine.js"></script>
+    <script src="./gameObjects/gameObject.js"></script>
+    <script src="./gameObjects/rocket.js"></script>
+    <script src="./gameObjects/border.js"></script>
+    <script src="./gameObjects/projectile.js"></script>
+    <script src="./index.js"></script>
 </body>
 </html>
