created enemy class

--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
     <script src="./gameObjects/rocket.js"></script>
     <script src="./gameObjects/border.js"></script>
     <script src="./gameObjects/projectile.js"></script>
+    <script src="./gameObjects/enemy.js"></script>
+    <script src="./sceneObjects.js"></script>
     <script src="./index.js"></script>
 </body>
 </html>
